--- a/css/style.css
+++ b/css/style.css
@@ -337,3 +337,45 @@ h2 {
     color: #222;
     transition: 0.3s;
 }
+
+/* SECTION TESTIMONIALS */
+
+.section-testimonials {
+    padding-top: 5rem;
+}
+
+.testimonial {
+    margin-top: 5rem;
+    padding-bottom: 5rem;
+}
+
+.monka-img,
+.mario-img,
+.monice-img {
+    width: 110px;
+    height: auto;
+    border-radius: 50%;
+}
+
+.monka-img:hover,
+.mario-img:hover,
+.monice-img:hover {
+    transition: 0.5s;
+    transform: scale(0.95);
+}
+
+blockquote{
+    font-family: 'Nunito-Regular'
+}
+
+.fa.fa-quote-right {
+    margin-right: 10px;
+    
+}
+
+.testimonials-hr {
+    border-top: 1px solid rgba(19, 128, 36, 1);
+    width: 260px;
+    background: rgba(19, 128, 36, 1);
+    
+}
